[gd_scene load_steps=8 format=2]

[ext_resource path="res://Theme/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/ui/PNG/blue_button01.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/PNG/blue_button00.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/PNG/blue_button02.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/Font/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 5 )

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Title" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 357.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Title"]
margin_right = 1920.0
margin_bottom = 357.0

[node name="PausedLabel" type="Label" parent="VBoxContainer/Title/CenterContainer"]
margin_left = 690.0
margin_top = 88.0
margin_right = 1230.0
margin_bottom = 268.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="Menu" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 361.0
margin_right = 1920.0
margin_bottom = 718.0
size_flags_vertical = 3

[node name="Resume" type="CenterContainer" parent="VBoxContainer/Menu"]
margin_right = 1920.0
margin_bottom = 116.0
size_flags_vertical = 3

[node name="ResumeButton" type="TextureButton" parent="VBoxContainer/Menu/Resume"]
margin_left = 865.0
margin_top = 33.0
margin_right = 1055.0
margin_bottom = 82.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/Menu/Resume"]
margin_left = 888.0
margin_top = 35.0
margin_right = 1032.0
margin_bottom = 81.0
theme = ExtResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="CenterContainer" parent="VBoxContainer/Menu"]
margin_top = 120.0
margin_right = 1920.0
margin_bottom = 236.0
size_flags_vertical = 3

[node name="RestartButton" type="TextureButton" parent="VBoxContainer/Menu/Restart"]
margin_left = 865.0
margin_top = 33.0
margin_right = 1055.0
margin_bottom = 82.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/Menu/Restart"]
margin_left = 880.0
margin_top = 35.0
margin_right = 1040.0
margin_bottom = 81.0
theme = ExtResource( 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewBoard" type="CenterContainer" parent="VBoxContainer/Menu"]
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 357.0
size_flags_vertical = 3

[node name="NewButton" type="TextureButton" parent="VBoxContainer/Menu/NewBoard"]
margin_left = 865.0
margin_top = 34.0
margin_right = 1055.0
margin_bottom = 83.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/Menu/NewBoard"]
margin_left = 922.0
margin_top = 35.0
margin_right = 998.0
margin_bottom = 81.0
theme = ExtResource( 1 )
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="MarginContainer" parent="VBoxContainer"]
margin_top = 722.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/Menu/Resume/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/Restart/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/NewBoard/NewButton" to="." method="_on_NewButton_pressed"]
